--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "deploy": "vite build && vk-miniapps-deploy"
   },
   "dependencies": {
-    "@vkontakte/icons": "^2.154.0",
+    "@vkontakte/icons": "^2.92.0",
     "@vkontakte/vk-bridge": "^2.13.0",
     "@vkontakte/vk-bridge-react": "^1.0.1",
     "@vkontakte/vk-mini-apps-router": "^1.4.2",
-    "@vkontakte/vkui": "^6.7.4",
+    "@vkontakte/vkui": "^6.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.28.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^5.3.1",
